--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 test3.md filter=lfs diff=lfs merge=lfs -text
 test4.md filter=lfs diff=lfs merge=lfs -text
+test5.md filter=lfs diff=lfs merge=lfs -text
+test6.md filter=lfs diff=lfs merge=lfs -text
