--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ test3.md filter=lfs diff=lfs merge=lfs -text
 test4.md filter=lfs diff=lfs merge=lfs -text
 test5.md filter=lfs diff=lfs merge=lfs -text
 test6.md filter=lfs diff=lfs merge=lfs -text
+test7.md filter=lfs diff=lfs merge=lfs -text
