autolfs test 4bf

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ test4.md filter=lfs diff=lfs merge=lfs -text
 test5.md filter=lfs diff=lfs merge=lfs -text
 test6.md filter=lfs diff=lfs merge=lfs -text
 test7.md filter=lfs diff=lfs merge=lfs -text
+test8.md filter=lfs diff=lfs merge=lfs -text
