add limited array

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ test5.md filter=lfs diff=lfs merge=lfs -text
 test6.md filter=lfs diff=lfs merge=lfs -text
 test7.md filter=lfs diff=lfs merge=lfs -text
 test8.md filter=lfs diff=lfs merge=lfs -text
+test1.md filter=lfs diff=lfs merge=lfs -text
